fixed spacing issue

--- a/site.css
+++ b/site.css
@@ -30,7 +30,7 @@ header, h1 {
     background-color: rgb(236, 183, 234);
     border-style: solid;
     border-color: rgb(146, 113, 145);
-    margin-right: 125px;
+    margin-right: 50px;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
